[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapemate"
version = "0.1.0"
description = "Smart web scraping toolkit with structured content extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Officethree Technologies"}]
dependencies = ["pydantic>=2.0", "httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/scrapemate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
